--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "rireki-style"]
 	path = rireki-style
-	url = https://github.com/shigio/rireki-style
+	url = https://github.com/jeandeaual/rireki-style
